--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
+  hive_flutter: ^1.1.0
   speech_to_text: ^7.0.0
 
 dev_dependencies:
